--- a/config_single.yaml
+++ b/config_single.yaml
@@ -1,11 +1,11 @@
-algo_name: DQN-CNN
+algo_name: DQN-Single
 env: Pong-ram-v0
 max_ep: 2000
 batch_size: 128
 replay_buffer_size: 1e6
 exploration: 1000 
-model_save_path: ../model/
-rb_save_path: ../rb/
+model_save_path: ../model/single/
+rb_save_path: ../rb/single/
 save_interval: 200
 model_params:
   lr: 1e-5
