--- a/config_fc_sp.yaml
+++ b/config_fc_sp.yaml
@@ -1,11 +1,11 @@
-algo_name: DQN-FC
-env: Pong-ram-v0
+algo_name: DQN-FC-Break
+env: Breakout-ram-v0
 max_ep: 2000
 batch_size: 128
 replay_buffer_size: 1e6
 exploration: 1000 
-model_save_path: ../model/
-rb_save_path: ../rb/
+model_save_path: ../model/fc/space/
+rb_save_path: ../rb/fc/space/
 save_interval: 200
 model_params:
   lr: 1e-5
