--- a/config_cnn.yaml
+++ b/config_cnn.yaml
@@ -1,5 +1,5 @@
-algo_name: DQN-CNN
-env: Pong-ram-v0
+algo_name: DQN-CNN-Asteroid
+env: Asteroids-ram-v0
 max_ep: 2000
 batch_size: 128
 replay_buffer_size: 1e6
